# acpi_tables

./: Cargo.toml  README.md
examples/: qemu-acpi-template.toml  qemu_q35.rs
src/: lib.rs  qemu.rs  qemu_q35_dsdt_mid.hex  qemu_q35_dsdt_prefix.hex
